@@ -2,3 +2,9 @@ dependencies {
   implementation projects.purefunAnnotation
   testImplementation libs.compileTesting
 }
+
+test {
+  useJUnitPlatform()
+
+  jvmArgs(['--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'])
+}
